# pre-commit-hooks

./: .gitignore  .pre-commit-hooks.yaml  README.md  THIRDPARTYLICENSES  pyproject.toml
hooks/: run_third_party_license_generator.py
src/hooks/: run_third_party_license_generator.py
